# Flock-Chess

./: .gitignore  Dockerfile  How to run.txt  LICENSE.txt  README.md
Flock Chess - public/: CMakeLists.txt  DynamoDB-cpp-Setup.txt  How to run.txt
Flock Chess - public/src/: CMakeLists.txt  analyze_test.cpp  entry.cpp  movegen.cpp  movegen.h  parser.cpp  parser.h  var_moveset.txt  variants.ini
Flock Chess - public/src/bitboards/: CMakeLists.txt  bishops.cpp  bishops.h  duck.cpp  duck.h  king.cpp  king.h  knight.cpp  knight.h  magic.cpp  magic.h  pawn.cpp  pawn.h  rook.cpp  rook.h
Flock Chess - public/src/utils/: CMakeLists.txt  bitutils.h
Flock Chess - public/tests/: CMakeLists.txt  test_multiply.cpp
QE chess frontend/: index.html
QE chess server/: Dockerfile  How to run.txt  analyze_test.html  fastapi_engine_pool.py  post.html  pyvenv.cfg  requirements.txt  simple_fastapi.py
QE chess server/Scripts/: activate  activate.bat
QE chess server/tests/: test_dynamodb.py  test_dynamodb_live.py
